+ Fixes to layouts + Fixes to satisfy updated Java version 17